--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+:root {
+  --image-size: 128px;
+}
+
 body {
   background: hsl(219, 100%, 12%);
   color: white;
@@ -15,4 +19,54 @@ section {
 .section-center {
   width: 70vw;
   margin: 0 auto;
+}
+
+.btn {
+  padding: 1rem 4rem;
+  margin: 1rem;
+  color: #fff;
+  border: none;
+  background-color: #646464;
+  border-radius: 40px;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 800;
+  /* transition: all 0.2s ease-in-out; */
+  cursor: pointer;
+}
+
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #cef;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #cef transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
